2008-10-09  Till Kamppeter <till.kamppeter@gmail.com>

	* PPD/Dell/dl3100cn.ppd: Removed non-free PPD file

	* driver/Postscript-Brother.xml, driver/Postscript-Epson.xml,
	  driver/Postscript-KONICA_MINOLTA.xml, driver/Postscript-Oce.xml,
	  driver/Postscript-Oki.xml, driver/Postscript-Sharp.xml,
	  driver/Postscript-Toshiba.xml: Added driver entries for the
	  manufacturer-supplied PPD files for the remaining manufacturers.

	* printer/Brother-DCP-8045D.xml, printer/Dell-3100cn.xml,
	  printer/Epson-AcuLaser_C4100PS.xml,
	  printer/Epson-EPL-N2500PS.xml,
	  printer/KONICA_MINOLTA-bizhub_1050.xml,
	  printer/KONICA_MINOLTA-bizhub_1050P.xml,
	  printer/KONICA_MINOLTA-bizhub_1050e.xml,
	  printer/KONICA_MINOLTA-bizhub_1050eP.xml,
	  printer/KONICA_MINOLTA-bizhub_360.xml,
	  printer/KONICA_MINOLTA-bizhub_420.xml,
	  printer/KONICA_MINOLTA-bizhub_500.xml,
	  printer/KONICA_MINOLTA-bizhub_600.xml,
	  printer/KONICA_MINOLTA-bizhub_750.xml,
	  printer/KONICA_MINOLTA-bizhub_C250.xml,
	  printer/KONICA_MINOLTA-bizhub_C250P.xml,
	  printer/KONICA_MINOLTA-bizhub_C252.xml,
	  printer/KONICA_MINOLTA-bizhub_C252P.xml,
	  printer/KONICA_MINOLTA-bizhub_C300.xml,
	  printer/KONICA_MINOLTA-bizhub_C351.xml,
	  printer/KONICA_MINOLTA-bizhub_C352.xml,
	  printer/KONICA_MINOLTA-bizhub_C352P.xml,
	  printer/KONICA_MINOLTA-bizhub_C450.xml,
	  printer/KONICA_MINOLTA-bizhub_C450P.xml,
	  printer/KONICA_MINOLTA-bizhub_C451.xml,
	  printer/KONICA_MINOLTA-bizhub_C550.xml,
	  printer/Lexmark-C510.xml, printer/Lexmark-C510b.xml,
	  printer/Lexmark-C520.xml, printer/Lexmark-C522.xml,
	  printer/Lexmark-C524.xml, printer/Lexmark-C750.xml,
	  printer/Lexmark-C752.xml, printer/Lexmark-C752b.xml,
	  printer/Lexmark-C910.xml, printer/Lexmark-C912.xml,
	  printer/Lexmark-E350d.xml, printer/Lexmark-E352dn.xml,
	  printer/Oce-3145PS.xml, printer/Oce-3155PS.xml,
	  printer/Oce-3165PS.xml, printer/Oce-8445PS.xml,
	  printer/Oce-8465PS.xml, printer/Oce-PPC3073PS.xml,