@@ -16,6 +16,43 @@
   </arg_execution>
   <constraints>
      <constraint sense="true">
+      <driver>pxlmono</driver>
+      <arg_defval>ev/PJL-Duplex-Off</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <driver>pxlcolor</driver>
+      <arg_defval>ev/PJL-Duplex-Off</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <driver>Postscript</driver>
+     </constraint>
+     <constraint sense="false">
+      <driver>ljet4d</driver>
+     </constraint>
+     <constraint sense="false">
+      <driver>hpijs</driver>
+     </constraint>
+     <constraint sense="true">
+      <make>Generic</make>
+      <model>PCL 6/PCL XL Printer</model>
+      <arg_defval>ev/PJL-Duplex-Off</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Generic</make>
+      <model>PCL 6/PCL XL Printer</model>
+      <driver>Postscript</driver>
+     </constraint>
+     <constraint sense="false">
+      <make>Generic</make>
+      <model>PCL 6/PCL XL Printer</model>
+      <driver>ljet4d</driver>
+     </constraint>
+     <constraint sense="false">
+      <make>Generic</make>
+      <model>PCL 6/PCL XL Printer</model>
+      <driver>hpijs</driver>
+     </constraint>
+     <constraint sense="true">
       <make>Brother</make>
       <model>HL-1650</model>
       <arg_defval>ev/PJL-Duplex-Off</arg_defval>
