@@ -1,3 +1,10 @@
+2008-10-13  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* opt/PJL-Duplex.xml, opt/PJL-PJLDuplex.xml,
+	  opt/PJL-PJLBinding.xml: Made Duplex option available by default
+	  in the "pxlmono" and "pxlcolor" drivers and also for the Generic
+	  PCL 6/PCL XL Printer (Ubuntu bug #282738).
+
 2008-10-09  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* PPD/Dell/dl3100cn.ppd: Removed non-free PPD file
